--- a/irchit.dev/src/app/css/aboutme.module.css
+++ b/irchit.dev/src/app/css/aboutme.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     min-height: 75vh;
-    width: 100vw;
+    width: 100%;
     background: rgb(23,76,136);
     background: linear-gradient(90deg, rgba(23,76,136,1) 0%, rgba(23,76,136,1) 35%, rgba(44,56,53,0) 35.01%);
 }
@@ -82,6 +82,7 @@
     color: azure;
     margin-top: 2.5vh;
     font-size: xxx-large;
+    text-shadow: -15px 15px 15px rgba(0, 0, 0, 0.3);
 }
 
 .button{
